--- a/package.json
+++ b/package.json
@@ -1,27 +1,60 @@
 {
-  "name": "react-signals-forms",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react-signal-forms",
+  "description": "A forms library focusing on performance and modular extensibility.",
+  "author": "<r.drummen@hotmail.com>",
+  "version": "0.1.3",
+  "homepage": "https://github.com/ruuddrummen/react-signal-forms",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ruuddrummen/react-signal-forms"
+  },
+  "license": "MIT",
+  "keywords": [
+    "react",
+    "hooks",
+    "react-hooks",
+    "signals",
+    "form",
+    "forms",
+    "extensions",
+    "modular",
+    "form-rules",
+    "form-validation",
+    "validation",
+    "typescript"
+  ],
   "dependencies": {
-    "@preact/signals-react": "^1.3.6",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.60",
+    "@preact/signals-react": "^1.3.6"
+  },
+  "devDependencies": {
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^5.2.2"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17 || ^18"
+  },
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./extensions": {
+      "types": "./dist/extensions/index.d.ts",
+      "default": "./dist/extensions/index.js"
+    }
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "tsc": "tsc",
+    "build": "tsc --noEmit false",
+    "demo": "cd ./demo && npm run dev",
+    "ci-demo": "cd ./demo && npm run ci",
+    "build-demo": "cd ./demo && npm run build"
   },
   "eslintConfig": {
     "extends": [
