adds config; disables test

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
-    "plugins": [
-        ["@babel/plugin-proposal-private-property-in-object", { "loose": true }]
+  "plugins": [
+    [
+      "@babel/plugin-proposal-private-property-in-object",
+      {
+        "loose": true
+      }
     ]
+  ]
 }
