--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "esbenp.prettier-vscode",
     "planbcoding.vscode-react-refactor",
-    "wix.vscode-import-cost"
+    "wix.vscode-import-cost",
+    "dbaeumer.vscode-eslint"
   ]
 }
