adds submit features; adds initial values (#7)
* refactors form context to class; adds isSubmitting signal

* adds isSubmitting getter

* renames useFormContext -> useFormSignals

* adds values and submit features to form context

* adds vscode-react-refactor

* adds import cost extension; updates settings

* adds submit features

* fixes linter errors; adds eslint extension; updates settings

* improves SubmitBackdrop; fixes findings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "editor.tabSize": 2,
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "vscodeReactRefactor.functionType": "arrowFunction",
+  "editor.linkedEditing": true,
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": true
+  }
 }
