--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,8 @@
 {
   "recommendations": [
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "planbcoding.vscode-react-refactor",
+    "wix.vscode-import-cost",
+    "dbaeumer.vscode-eslint"
   ]
 }
