--- a/examples/demo/package.json
+++ b/examples/demo/package.json
@@ -7,13 +7,15 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tsc": "tsc"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/material": "^5.14.17",
+    "@preact/signals-react": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
