--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "demo": "cd ./demo;npm run dev",
-    "build-demo": "cd ./demo;npm run build"
+    "demo": "cd ./demo;npm run dev"
   },
   "eslintConfig": {
     "extends": [
