--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: |
-          cd ./demo
-          npm ci
-      - run: |
-          cd ./demo
-          npm run build
+      - run: npm run ci-demo
+      - run: npm run build-demo
