--- a/demo/package.json
+++ b/demo/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "tsc": "tsc"
+    "ci": "npm ci && cd .. && npm ci"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
