splits demo from library; migrates demo to vite (#12)
* scaffolds vite demo

* installs dependencies

* wip

* wip

* wip

* got demo working in vite

* wip - cleaning up library

* cleans up library

* cleans up

* moves demo folder up

* builds demo in pipeline

* builds in node 20.x

* fixes build

* fixes build

* fixes build

* removes node 14 from build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -14,8 +13,13 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "declaration": true,
+    "declarationMap": true,
+    "outDir": "./dist",
+    "composite": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "include": ["src"]
 }
