--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "react-signal-forms",
+  "description": "An forms library focussing on performance and modular extensibility.",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@preact/signals-react": "^1.3.6",
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "typescript": "^5.2.2"
   },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17 || ^18"
+  },
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "tsc": "tsc",
     "demo": "cd ./demo && npm run dev",
     "ci-demo": "cd ./demo && npm run ci",
     "build-demo": "cd ./demo && npm run build"
