--- a/demo/package.json
+++ b/demo/package.json
@@ -17,7 +17,8 @@
     "@mui/material": "^5.14.17",
     "@preact/signals-react": "^1.3.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-signal-forms": "^0.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
