--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "react-signal-forms",
-  "description": "An forms library focussing on performance and modular extensibility.",
-  "version": "0.1.0",
+  "description": "A forms library focussing on performance and modular extensibility.",
+  "version": "0.1.2",
   "dependencies": {
-    "@preact/signals-react": "^1.3.6",
+    "@preact/signals-react": "^1.3.6"
+  },
+  "devDependencies": {
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
-    "react": "^18.2.0",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
@@ -17,8 +18,19 @@
   ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./extensions": {
+      "types": "./dist/extensions/index.d.ts",
+      "default": "./dist/extensions/index.js"
+    }
+  },
   "scripts": {
     "tsc": "tsc",
+    "build": "tsc --noEmit false",
     "demo": "cd ./demo && npm run dev",
     "ci-demo": "cd ./demo && npm run ci",
     "build-demo": "cd ./demo && npm run build"
