--- a/package.json
+++ b/package.json
@@ -1,7 +1,28 @@
 {
   "name": "react-signal-forms",
-  "description": "A forms library focussing on performance and modular extensibility.",
-  "version": "0.1.2",
+  "description": "A forms library focusing on performance and modular extensibility.",
+  "author": "<r.drummen@hotmail.com>",
+  "version": "0.1.3",
+  "homepage": "https://github.com/ruuddrummen/react-signal-forms",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ruuddrummen/react-signal-forms"
+  },
+  "license": "MIT",
+  "keywords": [
+    "react",
+    "hooks",
+    "react-hooks",
+    "signals",
+    "form",
+    "forms",
+    "extensions",
+    "modular",
+    "form-rules",
+    "form-validation",
+    "validation",
+    "typescript"
+  ],
   "dependencies": {
     "@preact/signals-react": "^1.3.6"
   },
