--- a/package.json
+++ b/package.json
@@ -1,16 +1,57 @@
 {
   "name": "react-signal-forms",
-  "version": "0.1.0",
-  "private": true,
+  "description": "A forms library focusing on performance and modular extensibility.",
+  "author": "<r.drummen@hotmail.com>",
+  "version": "0.1.3",
+  "homepage": "https://github.com/ruuddrummen/react-signal-forms",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ruuddrummen/react-signal-forms"
+  },
+  "license": "MIT",
+  "keywords": [
+    "react",
+    "hooks",
+    "react-hooks",
+    "signals",
+    "form",
+    "forms",
+    "extensions",
+    "modular",
+    "form-rules",
+    "form-validation",
+    "validation",
+    "typescript"
+  ],
   "dependencies": {
-    "@preact/signals-react": "^1.3.6",
+    "@preact/signals-react": "^1.3.6"
+  },
+  "devDependencies": {
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "typescript": "^5.2.2"
   },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17 || ^18"
+  },
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./extensions": {
+      "types": "./dist/extensions/index.d.ts",
+      "default": "./dist/extensions/index.js"
+    }
+  },
   "scripts": {
+    "tsc": "tsc",
+    "build": "tsc --noEmit false",
     "demo": "cd ./demo && npm run dev",
     "ci-demo": "cd ./demo && npm run ci",
     "build-demo": "cd ./demo && npm run build"
