--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -17,13 +17,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
 
     /* Aliasing to signal-forms */
-    // "paths": {
-    //   "react-signal-forms": ["../src"],
-    //   "react-signal-forms/*": ["../src/*"]
-    // }
+    "paths": {
+      "react-signal-forms": ["../src"],
+      "react-signal-forms/*": ["../src/*"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
