updates readme; doesnt run build in draft pr

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,11 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+    types: [synchronize, opened, reopened, ready_for_review]
 
 jobs:
   build:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
 
     strategy:
