--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -22,7 +22,7 @@
     /* Aliasing to signal-forms */
     "paths": {
       "react-signal-forms": ["../src"],
-      "react-signal-forms/*": ["../src/*"]
+      "react-signal-forms/extensions": ["../src/extensions"]
     }
   },
   "include": ["src"],
