--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "react-signal-forms",
   "description": "A forms library focusing on performance and modular extensibility.",
   "author": "<r.drummen@hotmail.com>",
-  "version": "0.1.3",
-  "homepage": "https://github.com/ruuddrummen/react-signal-forms",
+  "version": "0.2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/ruuddrummen/react-signal-forms"
@@ -11,17 +10,17 @@
   "license": "MIT",
   "keywords": [
     "react",
-    "hooks",
-    "react-hooks",
+    "typescript",
     "signals",
+    "context",
+    "react-context",
     "form",
     "forms",
     "extensions",
     "modular",
     "form-rules",
     "form-validation",
-    "validation",
-    "typescript"
+    "validation"
   ],
   "dependencies": {
     "@preact/signals-react": "^1.3.6"
