--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   "editor.linkedEditing": true,
   "editor.codeActionsOnSave": {
     "source.organizeImports": true
-  }
+  },
+  "prettier.semi": false
 }
