--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/react": "^18.2.34",
     "concurrently": "^8.2.2",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
