--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,11 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+    types: [synchronize, opened, reopened, ready_for_review]
 
 jobs:
   build:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
 
     strategy:
@@ -23,7 +25,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm ci
+      - run: npm run ci
       - run: npm run tsc
-      - run: npm run ci-demo
       - run: npm run build-demo
