adds rules export; moves applicability extension

--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -22,7 +22,8 @@
     /* Aliasing to signal-forms */
     "paths": {
       "react-signal-forms": ["../src"],
-      "react-signal-forms/extensions": ["../src/extensions"]
+      "react-signal-forms/extensions": ["../src/extensions"],
+      "react-signal-forms/rules": ["../src/rules"]
     }
   },
   "include": ["src"],
