--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -27,5 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: release-drafter/release-drafter@v5
+        with:
+          version: 0.2.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
