--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -2,6 +2,10 @@ name: Draft release
 
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        type: string
+
   push:
     branches:
       - main
@@ -29,6 +33,6 @@ jobs:
     steps:
       - uses: release-drafter/release-drafter@v5
         with:
-          version: 0.2.4
+          version: ${{ github.event.inputs.version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
