--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "ci": "npm ci && cd ./demo && npm ci",
     "demo": "cd ./demo && npm run dev",
     "dev": "cd ./demo && concurrently --kill-others \"npm run tsc-watch\" \"npm run dev\"",
-    "build-demo": "cd ./demo && npm run build"
+    "build-demo": "cd ./demo && npm run build",
+    "postversion": "npm run ci && npm run build && git push && git push --tags"
   },
   "eslintConfig": {
     "extends": [
