--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Force update major tag
-        run: |
-          git tag v${{ steps.version.outputs.major }} ${{ steps.version.outputs.tag }} -f
-          git push origin refs/tags/v${{ steps.version.outputs.major }} -f
+      # Moves major tag to latest commit.
+      # - name: Force update major tag
+      #   run: |
+      #     git tag v${{ steps.version.outputs.major }} ${{ steps.version.outputs.tag }} -f
+      #     git push origin refs/tags/v${{ steps.version.outputs.major }} -f
