--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,9 @@ on:
 
 jobs:
   build:
+    name: Build and publish
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,7 +29,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: version
+      - name: Get version from tag
         id: version
         run: |
           tag=${GITHUB_REF/refs\/tags\//}
@@ -36,14 +39,16 @@ jobs:
           echo "version=${version}" >> $GITHUB_OUTPUT
           echo "major=${major}" >> $GITHUB_OUTPUT
 
-      - uses: release-drafter/release-drafter@v5
+      - name: Publish release
+        uses: release-drafter/release-drafter@v5
         with:
           version: ${{ steps.version.outputs.version }}
           publish: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: force update major tag
-        run: |
-          git tag v${{ steps.version.outputs.major }} ${{ steps.version.outputs.tag }} -f
-          git push origin refs/tags/v${{ steps.version.outputs.major }} -f
+      # Moves major tag to latest commit.
+      # - name: Force update major tag
+      #   run: |
+      #     git tag v${{ steps.version.outputs.major }} ${{ steps.version.outputs.tag }} -f
+      #     git push origin refs/tags/v${{ steps.version.outputs.major }} -f
