--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@types/react": "^18.2.34",
     "concurrently": "^8.2.2",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^1.0.0-beta.4"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17 || ^18"
@@ -56,6 +57,7 @@
   "scripts": {
     "tsc": "tsc",
     "build": "tsc --noEmit false",
+    "test": "vitest --typecheck",
     "ci": "npm ci && cd ./demo && npm ci",
     "demo": "cd ./demo && npm run dev",
     "dev": "cd ./demo && concurrently --kill-others \"npm run tsc-watch\" \"npm run dev\"",
