--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "@preact/signals-react": "^1.3.6"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.1.0",
     "@types/react": "^18.2.34",
+    "@vitejs/plugin-react": "^4.1.1",
     "concurrently": "^8.2.2",
+    "jsdom": "^22.1.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
+    "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^1.0.0-beta.4"
   },
   "peerDependencies": {
@@ -60,7 +64,7 @@
     "test": "vitest --typecheck",
     "ci": "npm ci && cd ./demo && npm ci",
     "demo": "cd ./demo && npm run dev",
-    "dev": "cd ./demo && concurrently --kill-others \"npm run tsc-watch\" \"npm run dev\"",
+    "dev": "concurrently --kill-others \"npm run test\" \"cd ./demo && npm run tsc-watch\" \"cd ./demo && npm run dev\"",
     "build-demo": "cd ./demo && npm run build",
     "preversion": "npm run ci && npm run build",
     "postversion": "git push && git push --tags"
