--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,5 @@ jobs:
           cache: "npm"
       - run: npm run ci
       - run: npm run tsc
+      - run: npm run test
       - run: npm run build-demo
