--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,7 @@ jobs:
           cache: "npm"
 
       - run: npm run ci
+      - run: npm run test
       - run: npm run build
       - run: npm publish
         env:
