--- a/demo/package.json
+++ b/demo/package.json
@@ -18,8 +18,7 @@
     "@mui/material": "^5.14.17",
     "@preact/signals-react": "^1.3.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-signal-forms": "^0.2.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
