--- a/demo/package.json
+++ b/demo/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.17",
     "@preact/signals-react": "^1.3.6",
     "react": "^18.2.0",
@@ -29,7 +30,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.2",
     "vite": "^4.4.5",
     "vite-tsconfig-paths": "^4.2.1"
   }
