adds needs to pipeline

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -36,6 +36,7 @@ jobs:
 
   deploy:
     name: Deploy
+    needs: [build]
     runs-on: ubuntu-latest
     environment: github-pages
     permissions:
