makes ui a little more responsive

--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -24,7 +24,9 @@
       "react-signal-forms": ["../src"],
       "react-signal-forms/extensions": ["../src/extensions"],
       "react-signal-forms/rules": ["../src/rules"]
-    }
+    },
+
+    "types": ["@emotion/react/types/css-prop"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
