--- a/demo/package.json
+++ b/demo/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.9.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -31,7 +32,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.3.2",
-    "vite": "^5.0.2",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite": "^5.0.2"
   }
 }
