--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "esbenp.prettier-vscode",
     "planbcoding.vscode-react-refactor",
     "wix.vscode-import-cost",
-    "dbaeumer.vscode-eslint"
+    "dbaeumer.vscode-eslint",
+    "stkb.rewrap"
   ]
 }
