--- a/demo/package.json
+++ b/demo/package.json
@@ -19,7 +19,8 @@
     "@mui/material": "^5.14.17",
     "@preact/signals-react": "^1.3.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.9.4",
