--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -22,8 +22,9 @@
     /* Aliasing to signal-forms */
     "paths": {
       "react-signal-forms": ["../src"],
-      "react-signal-forms/extensions": ["../src/extensions"],
-      "react-signal-forms/rules": ["../src/rules"]
+      "react-signal-forms/plugins": ["../src/plugins"],
+      "react-signal-forms/rules": ["../src/rules"],
+      "@/*": ["../src/*"]
     },
 
     "types": ["@emotion/react/types/css-prop"]
