--- a/package.json
+++ b/package.json
@@ -51,6 +51,10 @@
       "types": "./dist/plugins/index.d.ts",
       "default": "./dist/plugins/index.js"
     },
+    "./arrays": {
+      "types": "./dist/arrays/index.d.ts",
+      "default": "./dist/arrays/index.js"
+    },
     "./rules": {
       "types": "./dist/rules.d.ts",
       "default": "./dist/rules.js"
