--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   "devDependencies": {
     "@testing-library/react": "^14.1.0",
     "@types/react": "^18.2.34",
-    "concurrently": "^8.2.2",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
@@ -63,9 +62,8 @@
   },
   "scripts": {
     "ci": "npm ci && cd ./demo && npm ci",
-    "dev2": "npm-run-all --parallel tsc-demo dev-demo",
-    "dev": "concurrently --kill-others \"cd ./demo && npm run tsc-watch\" \"cd ./demo && npm run dev\"",
-    "dev-demo": "cd ./demo && npm run dev",
+    "dev": "npm-run-all --parallel tsc-demo demo",
+    "demo": "cd ./demo && npm run dev",
     "tsc-demo": "cd ./demo && npm run tsc-watch",
     "test": "vitest --typecheck",
     "build": "tsc --noEmit false",
