--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "devDependencies": {
     "@testing-library/react": "^14.1.0",
     "@types/react": "^18.2.34",
-    "concurrently": "^8.2.2",
     "jsdom": "^22.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "typescript": "^5.3.2",
     "vitest": "^1.0.0-beta.4"
@@ -62,8 +62,9 @@
   },
   "scripts": {
     "ci": "npm ci && cd ./demo && npm ci",
-    "dev": "concurrently --kill-others \"cd ./demo && npm run tsc-watch\" \"cd ./demo && npm run dev\"",
+    "dev": "npm-run-all --parallel tsc-demo demo",
     "demo": "cd ./demo && npm run dev",
+    "tsc-demo": "cd ./demo && npm run tsc-watch",
     "test": "vitest --typecheck",
     "build": "tsc --noEmit false",
     "build-demo": "cd ./demo && npm run build",
