--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@testing-library/react": "^14.1.0",
     "@types/react": "^18.2.34",
+    "@types/react-dom": "^18.2.17",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
@@ -35,7 +36,8 @@
     "vitest": "^1.0.0-beta.4"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17 || ^18"
+    "react": "^16.8.0 || ^17 || ^18",
+    "react-dom": "^16.8.0 || ^17 || ^18"
   },
   "files": [
     "dist"
