--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.1.0",
+    "@types/node": "^20.10.3",
     "@types/react": "^18.2.34",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "typescript": "^5.3.2",
-    "vitest": "^1.0.0-beta.4"
+    "vitest": "^1.0.0-beta.6"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17 || ^18"
