adds toc to readme

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "wix.vscode-import-cost",
     "dbaeumer.vscode-eslint",
     "stkb.rewrap",
-    "orta.vscode-twoslash-queries"
+    "orta.vscode-twoslash-queries",
+    "yzhang.markdown-all-in-one"
   ]
 }
